@@ -1,4 +1,5 @@
 oligo's TODO
+- Add affyio
 - Move code back from oligoClasses (leave there *only* class definitions and accessors for elements of those classes)
 - Fix pmSequence() to use the new struct in the pdInfoBuilder pkg
 - add examples, so package is tested whenever it's built and modifications do not break current code
